fix(mobile): 1) remove position:fixed from body to fix ornamental animations; 2) increase bottom margin to 2rem for better spacing

--- a/src/index.css
+++ b/src/index.css
@@ -35,7 +35,6 @@ code {
     overflow-y: hidden; /* Disable vertical scroll */
     width: 100%;
     max-width: 100%;
-    position: fixed; /* Fix the page in place */
     height: 100vh;
   }
   
